changes to projects & ideas section
changes to projects & ideas section

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ function initChart() {
 	</ul>
 <div class="row">
     <div class="twelve columns">
-    <div class="headline"><h1>Year-to-date sales / Revenue
-   	    <img src="images/business-contact.png" data-featherlight="#sales" alt="Have questions?" title="Have questions?" style="float:right;padding-right:0.5em;"/></h1></div> 
+    <div class="update-date">UPDATED: OCT.17</div>    <div class="headline"><h1>Year-to-date sales / Revenue
+   	    <img src="images/business-contact.png" data-featherlight="#sales" alt="Have questions?" title="Have questions?"/></h1></div> 
     <div class="lightbox" id="sales"><b>For More Information</b><br><br><ul><li>For Dummies, contact <b>Seta Frantz,</b> Director, Product Development & Interactive Services | (1) 317-572-3077 |  <a href="mailto:skfrantz@wiley.com">skfrantz@wiley.com</a></li>
 <li>For WEL, contact <b>Pete Schiller,</b> Director, Product Management
 Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.com">pschiller@wiley.com</a>
@@ -272,8 +272,9 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
  
   <div class="row">
 <div class="six columns">
-        <div class="headline"><h1>Projects &amp; Ideas
-   	      <img src="images/business-contact.png" data-featherlight="#ideas" alt="Have questions?" title="Have questions?" style="float:right;padding-right:0.5em;"/></h1>
+    <div class="update-date">UPDATED: OCT.17</div>    
+	<div class="headline"><h1> Ideas &amp; Projects
+   	      <img src="images/business-contact.png" data-featherlight="#ideas" alt="Have questions?" title="Have questions?"/></h1>
     <div class="lightbox" id="ideas"><b>For More Information</b><br><br><ul><li>
  
 For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product and Solutions Manager | (1) 317-572-3299 |  <a href="mailto:ndunlevy@wiley.com">ndunlevy@wiley.com</a></li>
@@ -284,97 +285,47 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 
    </div>
       
-<!-- Ideas and projects charts -->	
-	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
-
-
-    <div class="ideaslabel" style="margin-left: -80px"><font color="#66b3ff">IDEAS</font></div>
+	<h2 class="blue">IDEAS <img src="images/info_icon.png" data-featherlight="#ideas-info" alt="More Information" title="More Information"/></h2>
+    <div class="lightbox" id="ideas-info"><b>For More Information</b><br><br><ul><li>
+ 
+For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product and Solutions Manager | (1) 317-572-3299 |  <a href="mailto:ndunlevy@wiley.com">ndunlevy@wiley.com</a></li>
+<li><b>Hiral Lai,</b> Associate Director of Solutions Delivery  | (1) 201-748-7826 | <a href="mailto:hlai@wiley.com">hlai@wiley.com</a></li>
+<li><b>Nancy Gerome,</b> Vice President, Digital Product Strategy  | (1) 201-748-7687 | <a href="mailto:ngerome@wiley.com">ngerome@wiley.com</a>
+</li></ul></div>   
+	<div class="three columns">
+		<div class="dark-grey-box">Approved</div><div class="light-grey-box">7</div>
+		Not Approved		2
+	</div>
+	<div class="three columns">
+	Under Review		4
+		On Hold		1
+	</div>
+	<div class="three columns"><img src="images/submit your idea.png" alt="Submit Your Idea"></div>
 	
 	
-<div id="bubblechart" style="width: 85%; height: 100%; float:left; position:relative;  margin-bottom:2%; margin-left: 0px"></div>
+	<hr>
+	<h2 class="blue">PROJECTS <img src="images/info_icon.png" data-featherlight="#projects-info" alt="More Information" title="More Information"/></h2>
+    <div class="lightbox" id="projects-info"><b>For More Information</b><br><br><ul><li>
+ 
+For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product and Solutions Manager | (1) 317-572-3299 |  <a href="mailto:ndunlevy@wiley.com">ndunlevy@wiley.com</a></li>
+<li><b>Hiral Lai,</b> Associate Director of Solutions Delivery  | (1) 201-748-7826 | <a href="mailto:hlai@wiley.com">hlai@wiley.com</a></li>
+<li><b>Nancy Gerome,</b> Vice President, Digital Product Strategy  | (1) 201-748-7687 | <a href="mailto:ngerome@wiley.com">ngerome@wiley.com</a>
+</li></ul></div>   
 	  
 	  
-        <table width="100%" style="padding-bottom:0;margin-bottom:0;margin-top:280px">
+        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle" style="border-top: 1px solid #3399CC;">
     <tr>
-    <td width="46%" style="text-align:left;"><strong>NAME</strong></td>
+    <td width="46%" style="text-align:left;width:46%;"><strong>NAME</strong></td>
     <td width="21%"><strong>CURRENT PHASE</strong></td>	
     <td width="21%"><strong>PHASE COMPLETION</strong></td>
     <td width="12%"><strong>STATUS</strong></td>
     </tr>
 </tbody>
 </table>
-<button class="accordion active">OPERATIONAL IMPROVEMENT</button>
+
+<button class="accordion active">NEW PRODUCTS IDEATION</button>
 <div class="panel show">
-<table width="100%" style="margin-bottom:0;">
-<tbody valign="middle">
-
-  <tr>
-    <td width="38%" style="text-align:left;width:46%;">
-	<a href="#" class="tooltip">
-		WileyPLUS Onboarding, Training & Support
-		<span>
-			<strong>WileyPLUS Onboarding, Training & Support</strong><br />
-			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</span>
-	</a></td>
-    <td width="25%" style="width:21%;">Process Improvement</td>							<!--  INPUT CURRENT PHASE  -->
-    <td width="25%" style="width:21%;">12/31/16</td>						 		<!--  INPUT PHASE COMPLETION DATE -->
-    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->								
-  </tr>
-  
-  <tr>
-    <td style="text-align:left">
-		<a href="#" class="tooltip">
-		Digital Delivery Dashboard		    					                    <!--  INPUT NAME OF 'OPERATIONAL IMPROVEMENT' -->	
-		<span>
-			<strong>Digital Delivery Dashboard</strong><br />
-			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</span>
-	</a></td>
-    <td width="25%" style="width:21%;">Prototype</td>		   						<!--  INPUT CURRENT PHASE  -->
-    <td>08/30/16</td>										   		<!--  INPUT PHASE COMPLETION DATE -->
-    <td><img src="images/circle_green.png"></td>			   					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
-  </tr>
-  
-  <tr>
-    <td style="text-align:left">
-		<a href="#" class="tooltip">
-		Operationalizing Digital Delivery 					                    <!--  INPUT NAME OF 'OPERATIONAL IMPROVEMENT' -->	
-		<span>
-			<strong>Operationalizing Digital Delivery</strong><br />
-			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</span>
-	</a></td>
-    <td width="25%" style="width:21%;">Process Improvement</td>							<!--  INPUT CURRENT PHASE  -->
-    <td>03/15/17</td>												<!--  INPUT PHASE COMPLETION DATE -->
-    <td><img src="images/circle_red.png"></td>									<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->	
-  </tr>
-  
-  </tbody>
-</table>	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
-
-</div>
-
-<button class="accordion">MAINTENANCE</button>
-<div class="panel">
-<table width="100%" style="margin-bottom:0;">
-<tbody valign="middle">
-
-  <tr>
-    <td width="38%" style="text-align:left;width:46%;">NONE</td>	 					<!--  INPUT NAME OF 'MAINTENANCE' -->	
-    <td width="25%" style="width:21%;">Null</td>								<!--  INPUT CURRENT PHASE  -->
-    <td width="25%" style="width:21%;">Null</td>								<!--  INPUT PHASE COMPLETION DATE -->
-    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
-  </tr>
-  
-  </tbody>
-</table>	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
-
-</div>
-
-<button class="accordion">NEW PRODUCT</button>
-<div id="foo" class="panel">
 <table width="100%" style="margin-bottom:0;">
 <tbody valign="middle">
 
@@ -446,10 +397,80 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
 
     </div>
+	
+<button class="accordion">OPERATIONAL AND TECHNOLOGY IMPROVEMENT</button>
+<div id="foo" class="panel">	<table width="100%" style="margin-bottom:0;">
+<tbody valign="middle">
+
+  <tr>
+    <td width="38%" style="text-align:left;width:46%;">
+	<a href="#" class="tooltip">
+		WileyPLUS Onboarding, Training & Support
+		<span>
+			<strong>WileyPLUS Onboarding, Training & Support</strong><br />
+			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+		</span>
+	</a></td>
+    <td width="25%" style="width:21%;">Process Improvement</td>							<!--  INPUT CURRENT PHASE  -->
+    <td width="25%" style="width:21%;">12/31/16</td>						 		<!--  INPUT PHASE COMPLETION DATE -->
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->								
+  </tr>
+  
+  <tr>
+    <td style="text-align:left">
+		<a href="#" class="tooltip">
+		Digital Delivery Dashboard		    					                    <!--  INPUT NAME OF 'OPERATIONAL IMPROVEMENT' -->	
+		<span>
+			<strong>Digital Delivery Dashboard</strong><br />
+			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+		</span>
+	</a></td>
+    <td width="25%" style="width:21%;">Prototype</td>		   						<!--  INPUT CURRENT PHASE  -->
+    <td>08/30/16</td>										   		<!--  INPUT PHASE COMPLETION DATE -->
+    <td><img src="images/circle_green.png"></td>			   					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
+  </tr>
+  
+  <tr>
+    <td style="text-align:left">
+		<a href="#" class="tooltip">
+		Operationalizing Digital Delivery 					                    <!--  INPUT NAME OF 'OPERATIONAL IMPROVEMENT' -->	
+		<span>
+			<strong>Operationalizing Digital Delivery</strong><br />
+			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+		</span>
+	</a></td>
+    <td width="25%" style="width:21%;">Process Improvement</td>							<!--  INPUT CURRENT PHASE  -->
+    <td>03/15/17</td>												<!--  INPUT PHASE COMPLETION DATE -->
+    <td><img src="images/circle_red.png"></td>									<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->	
+  </tr>
+  
+  </tbody>
+</table>	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+
+</div>
+
+<button class="accordion">MAINTENANCE</button>
+<div class="panel">
+<table width="100%" style="margin-bottom:0;">
+<tbody valign="middle">
+
+  <tr>
+    <td width="38%" style="text-align:left;width:46%;">NONE</td>	 					<!--  INPUT NAME OF 'MAINTENANCE' -->	
+    <td width="25%" style="width:21%;">Null</td>								<!--  INPUT CURRENT PHASE  -->
+    <td width="25%" style="width:21%;">Null</td>								<!--  INPUT PHASE COMPLETION DATE -->
+    <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
+  </tr>
+  
+  </tbody>
+</table>	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+
+</div>
+
     </div>
 <div class="six columns">   
-   	  <div class="headline"><h1>Product Updates
-      <img src="images/business-contact.png" data-featherlight="#productupdates" alt="Have questions?" title="Have questions?" style="float:right;padding-right:0.5em;"/></h1></div> 
+   	  <div class="update-date">UPDATED: OCT.17</div>    
+	<div class="headline"><h1>Product Updates
+      <img src="images/business-contact.png" data-featherlight="#productupdates" alt="Have questions?" title="Have questions?"/></h1></div> 
   
   <div class="lightbox" id="productupdates"><b>For More Information</b><br><br><ul><li>For Dummies, contact <b>Seta Frantz,</b> Director, Product Development & Interactive Services | (1) 317-572-3077 |  <a href="mailto:skfrantz@wiley.com">skfrantz@wiley.com</a></li>
 <li>For WEL, contact <b>Pete Schiller,</b> Director, Product Management
@@ -534,8 +555,8 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 
     
 <div class="six columns rightcolumn">    
-      <div class="headline"><h1>Reliability &amp; Usage
-   	      <img src="images/business-contact.png" data-featherlight="#reliability" alt="Have questions?" title="Have questions?" style="float:right;padding-right:0.5em;"/></h1>
+      <div class="update-date">UPDATED: OCT.17</div>    <div class="headline"><h1>Reliability &amp; Usage
+   	      <img src="images/business-contact.png" data-featherlight="#reliability" alt="Have questions?" title="Have questions?"/></h1>
       </div>
        <div class="lightbox" id="question">Information on what these are can be put here.</div>
           <div class="lightbox" id="reliability"><b>For More Information</b><br><br><ul><li>For Dummies, contact <b>Nancy Bane,</b> Senior Web Production Manager | (1) 317-572-3305 |  <a href="mailto:nbane@wiley.com">nbane@wiley.com</a></li>
