--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 		On Hold		1
 	</div>
 	<div class="three columns"><img src="images/submit your idea.png" alt="Submit Your Idea"></div>
-	
+	<div style="clear:both"></div>
 	
 	<hr>
 	<h2 class="blue">PROJECTS <img src="images/info_icon.png" data-featherlight="#projects-info" alt="More Information" title="More Information"/></h2>
@@ -311,7 +311,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <li><b>Hiral Lai,</b> Associate Director of Solutions Delivery  | (1) 201-748-7826 | <a href="mailto:hlai@wiley.com">hlai@wiley.com</a></li>
 <li><b>Nancy Gerome,</b> Vice President, Digital Product Strategy  | (1) 201-748-7687 | <a href="mailto:ngerome@wiley.com">ngerome@wiley.com</a>
 </li></ul></div>   
-	  
+	  <img src="images/projects.png" alt="Projects">
 	  
         <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle" style="border-top: 1px solid #3399CC;">
