--- a/index.html
+++ b/index.html
@@ -292,18 +292,23 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <li><b>Hiral Lai,</b> Associate Director of Solutions Delivery  | (1) 201-748-7826 | <a href="mailto:hlai@wiley.com">hlai@wiley.com</a></li>
 <li><b>Nancy Gerome,</b> Vice President, Digital Product Strategy  | (1) 201-748-7687 | <a href="mailto:ngerome@wiley.com">ngerome@wiley.com</a>
 </li></ul></div>   
-	<div class="three columns">
-		<div class="dark-grey-box">Approved</div><div class="light-grey-box">7</div>
-		Not Approved		2
-	</div>
-	<div class="three columns">
-	Under Review		4
-		On Hold		1
-	</div>
-	<div class="three columns"><img src="images/submit your idea.png" alt="Submit Your Idea"></div>
-	<div style="clear:both"></div>
 	
-	<hr>
+<table width="100%" style="margin-bottom:0;margin-left:11px;">
+<tbody valign="middle">
+  <tr style="border:none !important;">
+    <td width="25%" style="padding-left: 5px;height: 30px;width:25%;border:none !important;"><div class="dark-grey-box">APPROVED</div><div class="light-grey-box">7</div></td>	 					<!--  INPUT NAME OF 'MAINTENANCE' -->	
+    <td width="25%" style="padding-left: 5px;height: 30px;width:25%;border:none !important;"><div class="dark-grey-box">UNDER REVIEW</div><div class="light-grey-box">4</div></td>								<!--  INPUT CURRENT PHASE  -->
+	  <td rowspan="2" style="border:none !important;"><img src="images/submit your idea.png" alt="Submit Your Idea"></td>								<!--  INPUT PHASE COMPLETION DATE -->
+  </tr>
+	<tr style="border:none !important;">
+    <td width="30%" style="padding-left: 5px;height: 30px;width:25%;border:none !important;"><div class="dark-grey-box">NOT APPROVED</div><div class="light-grey-box">2</div></td>	 					<!--  INPUT NAME OF 'MAINTENANCE' -->	
+    <td width="30%" style="padding-left: 5px;height: 30px;width:25%;border:none !important;"><div class="dark-grey-box">ON HOLD</div><div class="light-grey-box">1</div></td>								<!--  INPUT CURRENT PHASE  -->
+  </tr>
+  
+  </tbody>
+</table>
+	
+<hr style="margin-top: 3rem;border-width: 0;border-top: 1px solid #3399CC;margin-bottom:0;">	
 	<h2 class="blue">PROJECTS <img src="images/info_icon.png" data-featherlight="#projects-info" alt="More Information" title="More Information"/></h2>
     <div class="lightbox" id="projects-info"><b>For More Information</b><br><br><ul><li>
  
@@ -311,9 +316,9 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <li><b>Hiral Lai,</b> Associate Director of Solutions Delivery  | (1) 201-748-7826 | <a href="mailto:hlai@wiley.com">hlai@wiley.com</a></li>
 <li><b>Nancy Gerome,</b> Vice President, Digital Product Strategy  | (1) 201-748-7687 | <a href="mailto:ngerome@wiley.com">ngerome@wiley.com</a>
 </li></ul></div>   
-	  <img src="images/projects.png" alt="Projects">
+	<center><img src="images/projects.png" alt="Projects" style="margin-bottom:10px;"></center>
 	  
-        <table width="100%" style="padding-bottom:0;margin-bottom:0;">
+<table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle" style="border-top: 1px solid #3399CC;">
     <tr>
     <td width="46%" style="text-align:left;width:46%;"><strong>NAME</strong></td>
