Ideas & Projects section
added some comments & cleaned up code a bit

--- a/index.html
+++ b/index.html
@@ -293,16 +293,16 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <li><b>Nancy Gerome,</b> Vice President, Digital Product Strategy  | (1) 201-748-7687 | <a href="mailto:ngerome@wiley.com">ngerome@wiley.com</a>
 </li></ul></div>   
 	
-<table width="100%" style="margin-bottom:0;margin-left:11px;">
+<table class="idea-table">
 <tbody valign="middle">
   <tr style="border:none !important;">
-    <td width="25%" style="padding-left: 5px;height: 30px;width:25%;border:none !important;"><div class="dark-grey-box">APPROVED</div><div class="light-grey-box">7</div></td>	 					<!--  INPUT NAME OF 'MAINTENANCE' -->	
-    <td width="25%" style="padding-left: 5px;height: 30px;width:25%;border:none !important;"><div class="dark-grey-box">UNDER REVIEW</div><div class="light-grey-box">4</div></td>								<!--  INPUT CURRENT PHASE  -->
-	  <td rowspan="2" style="border:none !important;"><img src="images/submit your idea.png" alt="Submit Your Idea"></td>								<!--  INPUT PHASE COMPLETION DATE -->
+    <td style="padding-left: 5px;border:none !important;vertical-align:top;"><div class="dark-grey-box">APPROVED</div><div class="light-grey-box">7</div></td>	 					<!--  APPROVED NUMBER OF IDEAS -->	
+    <td style="padding-left: 5px;;border:none !important;vertical-align: top;"><div class="dark-grey-box">UNDER REVIEW</div><div class="light-grey-box">4</div></td>								<!--  UNDER REVIEW NUMBER OF IDEAS  -->
+	  <td rowspan="2" style="border:none !important;"><img src="images/submit your idea.png" alt="Submit Your Idea"></td>								<!--  SUBMIT YOUR IDEA GRAPHIC -->
   </tr>
 	<tr style="border:none !important;">
-    <td width="30%" style="padding-left: 5px;height: 30px;width:25%;border:none !important;"><div class="dark-grey-box">NOT APPROVED</div><div class="light-grey-box">2</div></td>	 					<!--  INPUT NAME OF 'MAINTENANCE' -->	
-    <td width="30%" style="padding-left: 5px;height: 30px;width:25%;border:none !important;"><div class="dark-grey-box">ON HOLD</div><div class="light-grey-box">1</div></td>								<!--  INPUT CURRENT PHASE  -->
+    <td style="padding-left: 5px;border:none !important;vertical-align: middle;"><div class="dark-grey-box">NOT APPROVED</div><div class="light-grey-box">2</div></td>	 					<!--  NOT APPROVED NUMBER OF IDEAS -->	
+    <td style="padding-left: 5px;border:none !important;vertical-align: middle;"><div class="dark-grey-box">ON HOLD</div><div class="light-grey-box">1</div></td>								<!--  ON HOLD NUMBER OF IDEAS -->
   </tr>
   
   </tbody>
