Width to button col
Gave a width dec. for the Submit your Idea button

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   <tr style="border:none !important;">
     <td style="padding-left: 5px;border:none !important;vertical-align:top;"><div class="dark-grey-box">APPROVED</div><div class="light-grey-box">7</div></td>	 					<!--  APPROVED NUMBER OF IDEAS -->	
     <td style="padding-left: 5px;;border:none !important;vertical-align: top;"><div class="dark-grey-box">UNDER REVIEW</div><div class="light-grey-box">4</div></td>								<!--  UNDER REVIEW NUMBER OF IDEAS  -->
-	  <td rowspan="2" style="border:none !important;"><img src="images/submit your idea.png" alt="Submit Your Idea"></td>								<!--  SUBMIT YOUR IDEA GRAPHIC -->
+    <td width="25%" rowspan="2" style="border:none !important;"><img src="images/submit your idea.png" alt="Submit Your Idea"></td>								<!--  SUBMIT YOUR IDEA GRAPHIC -->
   </tr>
 	<tr style="border:none !important;">
     <td style="padding-left: 5px;border:none !important;vertical-align: middle;"><div class="dark-grey-box">NOT APPROVED</div><div class="light-grey-box">2</div></td>	 					<!--  NOT APPROVED NUMBER OF IDEAS -->	
