Added lightbox info for Projects & Ideas
Added lightbox info for Projects & Ideas

--- a/index.html
+++ b/index.html
@@ -286,19 +286,15 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
    </div>
       
 	<h2 class="blue">IDEAS <img src="images/info_icon.png" data-featherlight="#ideas-info" alt="More Information" title="More Information"/></h2>
-    <div class="lightbox" id="ideas-info"><b>For More Information</b><br><br><ul><li>
- 
-For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product and Solutions Manager | (1) 317-572-3299 |  <a href="mailto:ndunlevy@wiley.com">ndunlevy@wiley.com</a></li>
-<li><b>Hiral Lai,</b> Associate Director of Solutions Delivery  | (1) 201-748-7826 | <a href="mailto:hlai@wiley.com">hlai@wiley.com</a></li>
-<li><b>Nancy Gerome,</b> Vice President, Digital Product Strategy  | (1) 201-748-7687 | <a href="mailto:ngerome@wiley.com">ngerome@wiley.com</a>
-</li></ul></div>   
+        <div class="lightbox" id="ideas-info">Ideas are submitted through the Idea Submission form. Ideas are reviewed by the Global Strategy Team and scored based on various criteria. Ideas and their initial scoring are presented to the Product Council for consideration. The Product Council determines which ideas should be moved forward as a project for further discovery.</div>   
+
 	
 <table class="idea-table">
 <tbody valign="middle">
   <tr style="border:none !important;">
     <td style="padding-left: 5px;border:none !important;vertical-align:top;"><div class="dark-grey-box">APPROVED</div><div class="light-grey-box">7</div></td>	 					<!--  APPROVED NUMBER OF IDEAS -->	
     <td style="padding-left: 5px;;border:none !important;vertical-align: top;"><div class="dark-grey-box">UNDER REVIEW</div><div class="light-grey-box">4</div></td>								<!--  UNDER REVIEW NUMBER OF IDEAS  -->
-    <td width="25%" rowspan="2" style="border:none !important;"><img src="images/submit your idea.png" alt="Submit Your Idea"></td>								<!--  SUBMIT YOUR IDEA GRAPHIC -->
+    <td width="25%" rowspan="2" style="border:none !important;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeLrD3Znu14Ml-WCMqS124NBNM1Y3a44FSmHTNiCuwc5lFifQ/viewform"><img src="images/submit your idea.png" alt="Submit Your Idea"></a></td>								<!--  SUBMIT YOUR IDEA GRAPHIC -->
   </tr>
 	<tr style="border:none !important;">
     <td style="padding-left: 5px;border:none !important;vertical-align: middle;"><div class="dark-grey-box">NOT APPROVED</div><div class="light-grey-box">2</div></td>	 					<!--  NOT APPROVED NUMBER OF IDEAS -->	
@@ -310,12 +306,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 	
 <hr style="margin-top: 3rem;border-width: 0;border-top: 1px solid #3399CC;margin-bottom:0;">	
 	<h2 class="blue">PROJECTS <img src="images/info_icon.png" data-featherlight="#projects-info" alt="More Information" title="More Information"/></h2>
-    <div class="lightbox" id="projects-info"><b>For More Information</b><br><br><ul><li>
- 
-For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product and Solutions Manager | (1) 317-572-3299 |  <a href="mailto:ndunlevy@wiley.com">ndunlevy@wiley.com</a></li>
-<li><b>Hiral Lai,</b> Associate Director of Solutions Delivery  | (1) 201-748-7826 | <a href="mailto:hlai@wiley.com">hlai@wiley.com</a></li>
-<li><b>Nancy Gerome,</b> Vice President, Digital Product Strategy  | (1) 201-748-7687 | <a href="mailto:ngerome@wiley.com">ngerome@wiley.com</a>
-</li></ul></div>   
+    <div class="lightbox" id="projects-info">Approved projects generally move through the following phases: discovery, proof of concept, prototype, pilot, launch.</div>
 	<center><img src="images/projects.png" alt="Projects" style="margin-bottom:10px;"></center>
 	  
 <table width="100%" style="padding-bottom:0;margin-bottom:0;">
