--- a/index.html
+++ b/index.html
@@ -17,190 +17,6 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script> 
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.js"></script>    
-<script type="text/javascript">
-google.load('visualization', '1', {
-    'packages': ['corechart', 'line']
-});
-google.setOnLoadCallback(initChart);
-$(window).on("throttledresize", function (event) {
-    initChart();
-});
-function initChart() {
-    
-// PROJECTS & IDEAS - BUBBLE CHART
-          var data2 = google.visualization.arrayToDataTable([
-        ['ID',                  'x',                'y',      'Status',       'Size'    	/* INPUT */ 	       ],
-        ['Approved: 7',        78.35,              1.69,      'Approved',       70 		/* approved   x   10 */],
-        ['Not Approved: 2',    79.2,               1.72,      'Not Approved',   30 		/* not approved x 10 */],
-        ['Under Review: 4',    79.79,              1.66,      'Under Review',   40 		/* under review x 10 */],
-        ['On Hold: 1',         80.21,              1.71,      'On Hold',        10 		/* on hold    x   10 */],
-        ['',                   80.66,              1.78,      '',                0 		/* placeholder       */],
-      ]);
-         var options2 = {
-        title: 'Ideas',
-        titlePosition:'top',
-        headerHeight:40,
-        hAxis: {title: ''},
-        vAxis: {title: ''},
-        sizeAxis: {maxSize:75},
-        hAxisviewWindowMode:'pretty',
-        tooltip: {trigger: 'none'},     
-        bubble: {textStyle: {fontSize: 11}, textStyle: {auraColor: 'none', bold: true, fontSize: 10, color: 'blue',}},
-        backgroundColor: '#F2F2F2',
-        legend: {position: 'none'},
-        chartAreabackgroundColor:{color:'#F2F2F2'},
-        colors: ['#66b3ff','#66b3ff','#66b3ff','#66b3ff','#66b3ff'],
-        chartArea:{left:0,width:'100%',height:'100%'},
-        hAxis: {gridlines: {color: '#333', count: 0}},
-        vAxis: {gridlines: {color: '#333', count: 0}}
-      };
-            var chart2 = new google.visualization.BubbleChart(document.getElementById('bubblechart'));
-            chart2.draw(data2, options2);   
-        
-//create first line chart - Dummies
-      var data7 = new google.visualization.DataTable();
-      data7.addColumn('number', 'X');
-      data7.addColumn('number', 'year 2017');
-      data7.addColumn('number', 'year 2016');
-
-//INPUT Data point (x, y1, y2); y1 = year 2017, y2 = year 2016
-      data7.addRows([
-        [0,  494670, 422920],
-        [1,  494670, 422920],
-        [2,  , 464020],
-        [3,   , 489895],
-        [4,  , 496895],
-      ]);
-      var options7 = {
-       colors:['#66CC66','#FFCC33'],      
-        backgroundColor: '#F2F2F2',
-        legend: {position: 'none'},
-        hAxis: {
-          ticks: [{v:1, f:'Q1'}, {v:2, f:'Q2'}, {v:3, f:'Q3'}, {v:4, f:'Q4'}],     /* X-axis range */  
-          title: '',
-          gridlines: {color: 'none'},
-          baselineColor: '#3399CC'
-        },
-        vAxis: {
-          ticks: [{v:0, f:''},200000,400000,600000,800000],     /* Y-axis range */          
-          title: '',
-          gridlines: {color: 'none'},
-          baselineColor: '#3399CC'
-        },
-        lineWidth: 5
-      };
-      var line = new google.visualization.LineChart(document.getElementById('line'));
-      line.draw(data7, options7);
-  
-  
-//create 2nd line chart - WEL
-        var data8 = new google.visualization.DataTable();
-      data8.addColumn('number', 'X');
-      data8.addColumn('number', 'year 2017');
-      data8.addColumn('number', 'year 2016');
-
-//INPUT Data point (x, y1, y2); y1 = year 2017, y2 = year 2016	
-      data8.addRows([
-        [0,  6000000, 3480000],
-        [1,  6000000,3480000],
-        [2,  , 3490000],
-        [3,   , 4650000],
-        [4,  , 4580000],
-      ]);
-      var options8 = {
-       colors:['#66CC66','#FFCC33'],     
-        backgroundColor: '#F2F2F2',
-        legend: {position: 'none'},
-        hAxis: {
-          ticks: [{v:1, f:'Q1'}, {v:2, f:'Q2'}, {v:3, f:'Q3'}, {v:4, f:'Q4'}],       /* X-axis range */
-          title: '',
-          gridlines: {color: 'none'},
-          baselineColor: '#3399CC'
-        },
-        vAxis: {
-          ticks: [{v:0, f:''}, 2000000,4000000,6000000,8000000],      /* Y-axis range */            
-          title: '',
-          gridlines: {color: 'none'},
-          baselineColor: '#3399CC'
-        },
-        lineWidth: 5
-      };
-      var line2 = new google.visualization.LineChart(document.getElementById('line2'));
-      line2.draw(data8, options8);
-  
-  
-//create 3rd line chart - WileyPLUS
-        var data9 = new google.visualization.DataTable();
-      data9.addColumn('number', 'X');
-      data9.addColumn('number', 'year 2017');
-      data9.addColumn('number', 'year 2016');
-
-//INPUT Data point (x, y1, y2); y1 = year 2017, y2 = year 2016	
-      data9.addRows([
-        [0,  14719037, 16554171],
-        [1,  14719037, 16554171],
-        [2,  , 18504590],
-        [3,   , 15892990],
-        [4,  , 4089835],
-      ]);
-      var options9 = {
-       colors:['#66CC66','#FFCC33'],      
-        backgroundColor: '#F2F2F2',
-        legend: {position: 'none'},
-        hAxis: {
-          ticks: [{v:1, f:'Q1'}, {v:2, f:'Q2'}, {v:3, f:'Q3'}, {v:4, f:'Q4'}],       /* X-axis range */
-          title: '',
-          gridlines: {color: 'none'},
-          baselineColor: '#3399CC'
-        },
-        vAxis: {
-          ticks: [{v:0, f:''},5000000,10000000,15000000,20000000, {v:500, f:''}],     /* Y-axis range */          
-          title: '',
-          gridlines: {color: 'none'},
-          baselineColor: '#3399CC'
-        },
-        lineWidth: 5
-      };
-      var line3 = new google.visualization.LineChart(document.getElementById('line3'));
-      line3.draw(data9, options9);
-  
-  
-//create 4th chart - WPLS
-        var data10 = new google.visualization.DataTable();
-      data10.addColumn('number', 'X');
-      data10.addColumn('number', 'year 2017');
-      data10.addColumn('number', 'year 2016');
-
-//INPUT Data point (x, y1, y2); y1 = year 2017, y2 = year 2016	
-      data10.addRows([
-        [0,  14719037, 16554171],
-        [1,  14719037, 16554171],
-        [2,  , 18504590],
-        [3,   , 15892990],
-        [4,  , 4089835],
-      ]);
-      var options10 = {
-       colors:['#66CC66','#FFCC33'],      
-        backgroundColor: '#F2F2F2',
-        legend: {position: 'none'},
-        hAxis: {
-          ticks: [{v:1, f:'Q1'}, {v:2, f:'Q2'}, {v:3, f:'Q3'}, {v:4, f:'Q4'}],      /* X-axis range */ 
-          title: '',
-          gridlines: {color: 'none'},
-          baselineColor: '#3399CC'
-        },
-        vAxis: {
-          ticks: [{v:0, f:''},5000000,10000000,15000000,20000000, {v:500, f:''}],     /* Y-axis range */        
-          title: '',
-          gridlines: {color: 'none'},
-          baselineColor: '#3399CC'
-        },
-        lineWidth: 5
-      };
-      var line4 = new google.visualization.LineChart(document.getElementById('line4'));
-      line4.draw(data10, options10);
-}
-</script>
 </head>
 <body>
 
@@ -433,101 +249,96 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <h1></h1>
     <div class="stats">
       <ul data-metric="dummies">
-    <h1>Unique Visitors</h1>         
+    <h1>Ad Revenue</h1>         
         <li>
-          <div class="key">FY17 YTD Total</div>
-          <div class="val">54M</div>
+          <div class="key">FY16 YTD Total</div>
+          <div class="val">$1.87M</div>
         </li>
         <li>
-          <div class="key">Past 7 days</div>
-          <div class="val">2.5M</div>
+          <div>&nbsp;</div>
+          <div></div>
         </li>       
       </ul>
       <ul data-metric="WEL">
-    <h1>Unique Visitors</h1>         
+    <h1>Conversions</h1>         
         <li>
-          <div class="key">FY17 YTD</div>
-          <div class="val">524K*/186K**</div>
+          <div class="key">FY16 YTD Total</div>
+          <div class="val">1.58%</div>
         </li>
         <li>
-          <div class="key">Past 7 days</div>
-          <div class="val">35K*/18K**</div>
-        </li>        
+          <div>&nbsp;</div>
+          <div></div>
+        </li>  
       </ul>
       <ul data-metric="WileyPLUS">
-    <h1>Unique Visitors</h1>         
+    <h1>Validations</h1>         
         <li>
-          <div class="key">FY17 YTD Total</div>
-          <div class="val">2M</div>
+          <div class="key">FY16 YTD Total</div>
+          <div class="val">$523K</div>
         </li>
         <li>
-          <div class="key">Past 7 days</div>
-          <div class="val">361K</div>
-        </li>  
+          <div>&nbsp;</div>
+          <div></div>
+        </li>   
       </ul>
 
       <ul data-metric="WPLS">
-    <h1>Unique Visitors</h1>         
+    <h1>Validations</h1>         
         <li>
-          <div class="key">FY17 YTD Total</div>
-          <div class="val">204K</div>
+          <div class="key">FY16 YTD Total</div>
+          <div class="val">$20K</div>
         </li>
         <li>
-          <div class="key">Past 7 days</div>
-          <div class="val">34K</div>
+          <div>&nbsp;</div>
+          <div></div>
         </li>  
       </ul>      
     </div>
 
         <div class="stats">
       <ul data-metric="dummies">      
-    <h1>Reliability</h1>      
+    <h1>&nbsp;</h1>      
         <li>
-          <div class="key">Uptime</div>
-          <div class="val">99.5%</div>
+          <div class="key">FY17 YTD Total</div>
+          <div class="val">$599K</div>
         </li>   
         <li>
-          <div class="key">Last Outage</div>
-          <div class="val">128 Days</div>
+          <div></div>
+          <div></div>
         </li>  
         </ul>
       <ul data-metric="WEL">      
-    <h1>Reliability</h1>      
+    <h1>&nbsp;</h1>      
         <li>
-          <div class="key">Uptime</div>
-          <div class="val">99.5%</div>
+          <div class="key">FY17 YTD Total</div>
+          <div class="val">1.55%</div>
         </li>   
         <li>
-          <div class="key">Last Outage</div>
-          <div class="val">128 Days</div>
-        </li> 
-        <br>
-        <li>
-          <div><font size="1px"><strong>* www.efficientlearning.com</strong></font></div>
-          <div><font size="1px"><strong>** app.efficientlearning.com</strong></font></div>
-        </li>         
+          <div></div>
+          <div></div>
+        </li>           
         </ul>
        <ul data-metric="WileyPLUS">      
-    <h1>Reliability</h1>      
+    <h1>&nbsp;</h1>      
         <li>
-          <div class="key">Uptime</div>
-          <div class="val">99.17%</div>
+          <div class="key">FY17 YTD Total</div>
+          <div class="val">$120K</div>
         </li>   
         <li>
-          <div class="key">Last Outage</div>
-          <div class="val">182 Days</div>
-        </li>
+          <div></div>
+          <div></div>
+        </li> 
         </ul>
       <ul data-metric="WPLS">      
-    <h1>Reliability</h1>      
+    <h1>&nbsp;</h1>      
         <li>
-          <div class="key">Uptime</div>
-          <div class="val">100%</div>
+          <div class="key">FY17 YTD Total</div>
+          <div class="val">$8K</div>
         </li>   
         <li>
-          <div class="key">Last Outage</div>
-          <div class="val">N/A</div>
-        </li>           
+          <div></div>
+          <div></div>
+        </li> 
       </ul>
       </div>
   </div>
