--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 <li>For WileyPLUS (E4) or WPLS, contact <b>Amanda Clinton</b>, Customer Engagement Coordinator | (1) 201-748-5966 | <a href="mailto:aclinton@wiley.com">aclinton@wiley.com</a></li></ul></div>    
   	
 <div class="containers" style="background-color: #f2f2f2; width: 100%">
- <h1 class="chtitle">Sales/Ad Revenue</h1> 
+ <!--<h1 class="chtitle">Sales/Ad Revenue</h1> -->
   <div class="main_sale">
     <ul>
       <li class="active">
@@ -557,7 +557,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 </ul></div>    
 		
         <div class="containers" style="background-color: #f2f2f2; width: 100%">
- <h1 class="chtitle">Unique Visitors</h1> 
+ <!--<h1 class="chtitle">Unique Visitors</h1> -->
   <div class="main">
     <ul>
       <li class="active">
@@ -606,7 +606,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
               </dl>              
             </div>
           </div>
-          <h1>Dummies</h1>
+          <h1>Dummies:Unique Visitors</h1>
         </article>
       </li>
       <li>
@@ -985,7 +985,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   
   </tbody>
 </table>
-  	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+  	<img src="images/key_3.png" style="float:right;" alt="Legend">
 
     </div>
 	
@@ -1036,7 +1036,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   </tr>
   
   </tbody>
-</table>	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+</table>	<img src="images/key_3.png" style="float:right;"  alt="Legend">
 
 </div>
 
@@ -1053,7 +1053,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   </tr>
   
   </tbody>
-</table>	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+</table>	<img src="images/key_3.png" style="float:right;"  alt="Legend">
 
 </div>
 
@@ -1073,8 +1073,8 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle" style="border-top: 1px solid #3399CC;">
 <tr width="100%">
-<td class="header">Next Release</td>
-<td class="header">Release Details:</td>
+<td class="header" width="35%">Next Release</td>
+<td class="header">Release Details</td>
 </tr>
 </tbody></table>
 <div id="infolink"> <a href="http://www.wiley.com/college/dddash/products/dummies_roadmap.xlsx" rel="nofollow" class="simple-tooltip" title="Click Here for Roadmaps">Dummies <i class="ion-map" data-pack="default" data-tags="gps, navigation, pin" ></i></a></div>
@@ -1083,9 +1083,9 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 <tr>
 <td id="calendaricon-grey"><p class="daterelease">Jan<br>01</p></td> <!--  INPUT DATE  -->
 <td><ul class="releaseitems">
-        <li>Item 1</li>					<!--  INPUT ITEMS  -->
-        <li>Item 2</li>					<!--  INPUT ITEMS  -->	
-        <li>Item 3</li>					<!--  INPUT ITEMS  -->
+        <li>First Item</li>					<!--  INPUT ITEMS  -->
+        <li>Second Item</li>					<!--  INPUT ITEMS  -->	
+        <li>Third Item</li>					<!--  INPUT ITEMS  -->
         </ul></td>    
 </tr>    
     </tbody>
@@ -1136,8 +1136,8 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 
 		   
     
-<div id="legend" style="float: right; margin-bottom: 1%; margin-right:2%">
-<img src="https://s12.postimg.org/5kqulz00d/key_1.png" height="20" width="220"/>    
+<div id="legend" style="float: right;">
+<img src="images/key_5.png" />    
     </div>
 	  <div class="lightbox" id="mylightbox">
 Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">someone@wiley.com</a></div>
@@ -1251,7 +1251,7 @@ for (i = 0; i < acc.length; i++) {
     <link href="css/tipped.css" type="text/css" rel="stylesheet">
 <script>
      $(document).ready(function() {
-    Tipped.create('.simple-tooltip', { maxWidth:200, position:'right', size:'large' });
+    Tipped.create('.simple-tooltip', { maxWidth:225, position:'right', size:'large' });
   });
 </script>    
 
