--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
               </dl>              
             </div>
           </div>
-          <h1>Dummies:Unique Visitors</h1>
+          <h1>Dummies: Unique Visitors</h1>
         </article>
       </li>
       <li>
@@ -655,7 +655,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
               </dl>                
             </div>
           </div>
-          <h1>WEL</h1>
+          <h1>WEL: Unique Visitors</h1>
         </article>
       </li>
       <li>
@@ -704,7 +704,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
               </dl>                
             </div>
           </div>
-          <h1>WileyPLUS</h1>
+          <h1>WileyPLUS: Unique Visitors</h1>
         </article>
       </li>
       
@@ -754,7 +754,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
               </dl>              
             </div>
           </div>
-          <h1>WPLS</h1>
+          <h1>WPLS: Unique Visitors</h1>
         </article>
       </li>      
     </ul>
@@ -922,12 +922,9 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 
   <tr>
     <td width="38%" style="text-align:left;width:46%;">
-		<a href="#" class="tooltip">
+		<a href="#">
 		Global Diagnostic Assesssment 					                    <!--  INPUT NAME OF 'NEW PRODUCT' -->	
-		<span>
-			<strong>Global Diagnostic Assesssment</strong><br />
-			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</span>
+		
 	</a></td>	
     <td width="25%" style="width:21%;">MVP Launch</td>								<!--  INPUT CURRENT PHASE  -->
     <td>09/30/16</td>												<!--  INPUT PHASE COMPLETION DATE -->
@@ -936,12 +933,9 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   
   <tr>
     <td width="38%" style="text-align:left;width:46%;">
-		<a href="#" class="tooltip">
+		<a href="#">
 		Wiley Assessment Service					                    <!--  INPUT NAME OF 'NEW PRODUCT' -->	
-		<span>
-			<strong>Wiley Assessment Service</strong><br />
-			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</span>
+		
 	</a></td>		
     <td width="25%" style="width:21%;">Pilot</td>								<!--  INPUT CURRENT PHASE  -->
     <td>12/15/17</td> 												<!--  INPUT PHASE COMPLETION DATE -->
@@ -995,12 +989,9 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 
   <tr>
     <td width="38%" style="text-align:left;width:46%;">
-	<a href="#" class="tooltip">
+	<a href="#" >
 		WileyPLUS Onboarding, Training & Support
-		<span>
-			<strong>WileyPLUS Onboarding, Training & Support</strong><br />
-			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</span>
+		
 	</a></td>
     <td width="25%" style="width:21%;">Process Improvement</td>							<!--  INPUT CURRENT PHASE  -->
     <td width="25%" style="width:21%;">12/31/16</td>						 		<!--  INPUT PHASE COMPLETION DATE -->
@@ -1009,12 +1000,9 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   
   <tr>
     <td style="text-align:left">
-		<a href="#" class="tooltip">
+		<a href="#">
 		Digital Delivery Dashboard		    					                    <!--  INPUT NAME OF 'OPERATIONAL IMPROVEMENT' -->	
-		<span>
-			<strong>Digital Delivery Dashboard</strong><br />
-			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</span>
+		
 	</a></td>
     <td width="25%" style="width:21%;">Prototype</td>		   						<!--  INPUT CURRENT PHASE  -->
     <td>08/30/16</td>										   		<!--  INPUT PHASE COMPLETION DATE -->
@@ -1023,12 +1011,9 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   
   <tr>
     <td style="text-align:left">
-		<a href="#" class="tooltip">
+		<a href="#">
 		Operationalizing Digital Delivery 					                    <!--  INPUT NAME OF 'OPERATIONAL IMPROVEMENT' -->	
-		<span>
-			<strong>Operationalizing Digital Delivery</strong><br />
-			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</span>
+		
 	</a></td>
     <td width="25%" style="width:21%;">Process Improvement</td>							<!--  INPUT CURRENT PHASE  -->
     <td>03/15/17</td>												<!--  INPUT PHASE COMPLETION DATE -->
