--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
         </li>     
       </ul>
       <ul data-metric="WEL">
-    <h1>Conversions<span  class="simple-tooltip" title="The percentage of free trial users who convert to purchasers."><i class="ion-information-circled" data-pack="default"></i></span></h1>         
+    <h1>Conversions<span  class="simple-tooltip" title="The percentage of free trial users who convert to purchasers."><i class="ion-information-circled" data-pack="default" style="font-size:15px;"></i></span></h1>         
         <li>
           <div class="key">FY16 Total</div>
           <div class="val">1.58%</div>
@@ -924,7 +924,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <table width="100%" style="padding-bottom:0;margin-bottom:0;">
 <tbody valign="middle" style="border-top: 1px solid #3399CC;">
     <tr>
-    <td width="46%" style="text-align:left;width:46%;"><strong>NAME</strong></td>
+    <td width="46%"><strong>NAME</strong></td>
     <td width="21%"><strong>CURRENT PHASE</strong></td>	
     <td width="21%"><strong>PHASE COMPLETION</strong></td>
     <td width="12%"><strong>STATUS</strong></td>
