--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
               </dq>              
               <dl>
                 <dt>Q2</dt>
-                <!--<dd>26K</dd>-->
+                <dd>33M</dd>
               </dl>
               <dq>
                 <dt></dt>
@@ -503,7 +503,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <h1>AD REVENUE GOAL</h1>      
         <li>
           <div class="key">FY16 Total</div>
-          <div class="val">$???</div>
+          <div class="val">TBD</div>
         </li>   
         <li>
           <div class="key">FY17 YTD</div>
@@ -525,7 +525,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <h1>&nbsp;</h1>      
         <li>
           <div class="key">FY17 YTD Total</div>
-          <div class="val">$120K</div>
+          <div class="val">328K</div>
         </li>   
         <li>
           <div></div>
@@ -736,7 +736,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
             <div class="data WPLS">
               <dq>
                 <dt></dt>
-                <dd>19K</dd>
+                <dd>185K</dd>
               </dq>                  
               <dl>
                 <dt>Q1</dt>
@@ -748,11 +748,11 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
               </dq>              
               <dl>
                 <dt>Q2</dt>
-                <dd>56K</dd>
+                <!--<dd>56K</dd>-->
               </dl>
               <dq>
                 <dt></dt>
-                <dd>59K</dd>
+                <dd>589K</dd>
               </dq>                  
               <dl>
                 <dt>Q3</dt>
@@ -760,7 +760,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
               </dl>
               <dq>
                 <dt></dt>
-                <dd>87K</dd>
+                <dd>864K</dd>
               </dq>                  
               <dl>
                 <dt>Q4</dt>
@@ -806,11 +806,11 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <h1>Unique Visitors</h1>         
         <li>
           <div class="key">FY17 YTD Total</div>
-          <div class="val">2M</div>
+          <div class="val">4.5M</div>
         </li>
         <li>
           <div class="key">Past 7 days</div>
-          <div class="val">361K</div>
+          <div class="val">521K</div>
         </li>  
         <div><font size="1px"><strong><a href="reliability/wileyplus_kpi.pdf"><font size="2"> WileyPLUS "Customer Pain Index (CPI)"</font></a></strong></font></div>
       </ul>
@@ -862,7 +862,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
         </li>   
         <li>
           <div class="key">Last Outage</div>
-          <div class="val">182 Days</div>
+          <div class="val">20 Days</div>
         </li>
         </ul>
       <ul data-metric="WPLS">      
@@ -965,14 +965,14 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   </tr>
   
    <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="projects/wileyproblems.pdf">Wiley Problems</a></td>					<!--  INPUT NAME OF 'NEW PRODUCT' -->	
+    <td width="38%" style="text-align:left;width:46%;"><a href="http://www.wiley.com/college/dddash/projects/wileyproblems.pdf">Wiley Problems</a></td>					<!--  INPUT NAME OF 'NEW PRODUCT' -->	
     <td width="25%" style="width:21%;">Discovery</td>								<!--  INPUT CURRENT PHASE  -->
     <td>11/01/16</td>												<!--  INPUT PHASE COMPLETION DATE -->
     <td width="12%" style="width:12%;"><img src="images/circle_blue.png" title="Project has been put on hold given a number of other projects already under way that may address this need."></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
   </tr>
   
    <tr> 
-    <td style="text-align:left"><a href="projects/agudatascience.pdf">AGU Data Science Courseware</a></td>						<!--  INPUT NAME OF 'NEW PRODUCT' -->	
+    <td style="text-align:left"><a href="http://www.wiley.com/college/dddash/projects/agudatascience.pdf">AGU Data Science Courseware</a></td>						<!--  INPUT NAME OF 'NEW PRODUCT' -->	
     <td width="25%" style="width:21%;">Prototype</td>								<!--  INPUT CURRENT PHASE  -->
     <td>11/15/16</td>												<!--  INPUT PHASE COMPLETION DATE -->
     <td width="12%" style="width:12%;"><img src="images/circle_red.png" title="AGU has been unresponsive to providing learning objectives or any firm commitments to dates."></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
@@ -1009,7 +1009,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 
   <tr>
     <td width="38%" style="text-align:left;width:46%;">
-	<a href="projects/wpots.pdf" >
+	<a href="http://www.wiley.com/college/dddash/projects/wpots.pdf" >
 		WileyPLUS Onboarding, Training & Support
 		
 	</a></td>
@@ -1051,7 +1051,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <tbody valign="middle">
 
   <tr>
-    <td width="38%" style="text-align:left;width:46%;">Data Center Move <br>(WileyPLUS servers to Texas)</td>	 					<!--  INPUT NAME OF 'MAINTENANCE' -->	
+    <td width="38%" style="text-align:left;width:46%;"><a href="http://www.wiley.com/college/dddash/projects/datacenter_migration.pdf">Data Center Move <br>(WileyPLUS servers to Texas)</td>	 					<!--  INPUT NAME OF 'MAINTENANCE' -->	
     <td width="25%" style="width:21%;">Cutover</td>								<!--  INPUT CURRENT PHASE  -->
     <td width="25%" style="width:21%;">12/26/16</td>								<!--  INPUT PHASE COMPLETION DATE -->
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
