--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   <tr style="border:none !important;">
     <td style="padding-left: 5px;border:none !important;vertical-align:top;"><div class="dark-grey-box">APPROVED</div><div class="light-grey-box">7</div></td>	 					<!--  APPROVED NUMBER OF IDEAS -->	
     <td style="padding-left: 5px;;border:none !important;vertical-align: top;"><div class="dark-grey-box">UNDER REVIEW</div><div class="light-grey-box">4</div></td>								<!--  UNDER REVIEW NUMBER OF IDEAS  -->
-      <td width="35%" rowspan="2" style="border:none !important;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeLrD3Znu14Ml-WCMqS124NBNM1Y3a44FSmHTNiCuwc5lFifQ/viewform" target="_blank"><img src="images/submit_your_idea.png" alt="Submit Your Idea"></a></td>								<!--  SUBMIT YOUR IDEA GRAPHIC -->
+      <td width="35%" rowspan="2" style="border:none !important;"><a href="http://www.wiley.com/college/klideas" target="_blank"><img src="images/submit_your_idea.png" alt="Submit Your Idea"></a></td>								<!--  SUBMIT YOUR IDEA GRAPHIC -->
   </tr>
 	<tr style="border:none !important;">
     <td style="padding-left: 5px;border:none !important;vertical-align: middle;"><div class="dark-grey-box">NOT APPROVED</div><div class="light-grey-box">2</div></td>	 					<!--  NOT APPROVED NUMBER OF IDEAS -->	
