--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
 <link href="css/unslider.css" rel="stylesheet" type="text/css">
 <link href="css/unslider-dots.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<!-- Hotjar Tracking Code for All Wiley.com Pages -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:258358,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+</script>	
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
 <script src="js/chart.js"></script>
 <script src="js/Chart.bundle.js"></script>    
